codex-rs/tui-pty-e2e/tests/snapshots/startup__runs_in_temp_directory.snap
---
source: tui-pty-e2e/tests/startup.rs
expression: normalize_for_input_snapshot(contents)
---
› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
