codex-rs/tui-pty-e2e/tests/snapshots/startup__startup_shows_nori_banner.snap
---
source: tui-pty-e2e/tests/startup.rs
expression: "normalize_for_snapshot(lines.collect::<Vec<&str>>()[1..8].join(\"\\n\"))"
---
│ Nori v0.0.0                │
│                            │
│ directory: [TMP_DIR] │
│ agent:     mock-model      │
╰────────────────────────────╯
