codex-rs/tui-pty-e2e/tests/snapshots/startup__startup_welcome_dimensions_40x120.snap
---
source: tui-pty-e2e/tests/startup.rs
expression: normalize_for_input_snapshot(contents)
---
■ Operation 'ListCustomPrompts' is not supported in ACP mode


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
